welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: not found: value boolean
boolean fizz = str.charAt(0) == 'f';
^fizzBuzz:3: error: not found: value boolean
    boolean buzz = str.charAt(str.length() - 1) == 'b';
    ^fizzBuzz:5: error: not found: value fizz
    if (fizz && buzz) return "FizzBuzz";
        ^fizzBuzz:6: error: not found: value fizz
    if (fizz) return "Fizz";
        ^fizzBuzz:7: error: not found: value buzz
    if (buzz) return "Buzz";
        ^fizzBuzz:8: error: not found: value str
    return str;
           ^